src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Discovery_Explanation__c</fullName>
        <label>Discovery Explanation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Discovery_Outcome__c</fullName>
        <label>Discovery Outcome</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Prescription__c</fullName>
        <label>Discovery Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Likelihood_to_Multi_Line__c</fullName>
        <label>Likelihood to Multi-Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiline_Explanation__c</fullName>
        <label>Multiline Explanation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Multiline_Prescription__c</fullName>
        <label>Multiline Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Life_Events__c</fullName>
        <label>Number of Life Events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Life_Event__c</fullName>
        <label>Recent Life Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Baby</fullName>
                </value>
                <value>
                    <fullName>Graduation</fullName>
                </value>
                <value>
                    <fullName>Marriage</fullName>
                </value>
                <value>
                    <fullName>New vehicle</fullName>
                </value>
                <value>
                    <fullName>New job</fullName>
                </value>
                <value>
                    <fullName>New home</fullName>
                </value>
                <value>
                    <fullName>Birth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Field</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>